--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,38 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.pay {
+  align-content: center;
+  margin: 1% auto;
+  padding: 2%;
+  width: 30rem;
+  border: 1px #F806CC solid;
+  border-radius: 10px;
+  
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo {
+  background-color: #54E346;
+  padding: 10%;
+  width: 15rem;
+  margin: 1% auto;
+  border-radius: 5px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.logo h1 {
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.addr{
+  background-color: white;
+  border-radius: 5px;
+  overflow-x: hidden;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.addr a{
+  text-decoration: none;
+  color: black;
+}
+.home{
+  margin: 1% auto;
+  padding: 2%;
+  border: 1px #F806CC solid;
+  border-radius: 20px;
+  
 }
